# metaSDT

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sync_cpp.bat
Cpp/include/: algorithm_nlopt.hpp  algorithm_stan.hpp  build_objective.hpp  criterion_likelihood.hpp  criterion_posterior.hpp  criterion_prior.hpp  data_info.hpp  estimate_abc.hpp  estimate_map.hpp  estimate_mcmc.hpp  estimate_mle.hpp  info_data.hpp  info_nlopt.hpp  matrix_freq.hpp  matrix_mult.hpp  matrix_prob.hpp  model_sdt.hpp  modify_control.hpp  modify_outputs.hpp  modify_params.hpp  modify_prior.hpp  progress_bar.hpp  task_builder.hpp
Cpp/src/: algorithm_nlopt.cpp  algorithm_stan.cpp  build_objective.cpp  data_info.cpp  estimate_abc.cpp  estimate_map.cpp  estimate_mcmc.cpp  estimate_mle.cpp  info_data.cpp  info_nlopt.cpp  loss_function.cpp  matrix_freq.cpp  matrix_mult.cpp  matrix_prob.cpp  model_sdt.cpp  modify_control.cpp  modify_outputs.cpp  modify_params.cpp  modify_prior.cpp  objective_function.cpp  progress_bar.cpp  task_builder.cpp
Python/: CMakeLists.txt  pyproject.toml  setup.py
Python/dev/: test.py
Python/metaSDT/: __init__.py  _core.cp311-win_amd64.pyd  _core.cp314-win_amd64.pyd  _core_data_info.cp314-win_amd64.pyd  _core_loss_function.cp314-win_amd64.pyd  _core_matrix_freq.cp314-win_amd64.pyd  _core_matrix_mult.cp314-win_amd64.pyd  _core_matrix_prob.cp314-win_amd64.pyd  _help.cp314-win_amd64.pyd  _help_modify_params.cp314-win_amd64.pyd  _model.cp314-win_amd64.pyd  _model_sdt.cp314-win_amd64.pyd
Python/metaSDT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python/src/: py_criterion_likelihood.cpp  py_criterion_posterior.cpp  py_estimate_abc.cpp  py_estimate_map.cpp  py_estimate_mcmc.cpp  py_estimate_mle.cpp  py_info_data.cpp  py_matrix_freq.cpp  py_modify_control.cpp  py_modify_outputs.cpp  py_modify_params.cpp  py_modify_prior.cpp  py_progress_bar.cpp  wrapper_criterion_likelihood.cpp  wrapper_criterion_posterior.cpp  wrapper_criterion_prior.cpp  wrapper_data_info.cpp  wrapper_estimate_map.cpp  wrapper_estimate_mle.cpp  wrapper_loss_function.cpp  wrapper_matrix_freq.cpp  wrapper_matrix_mult.cpp  wrapper_matrix_prob.cpp  wrapper_model_sdt.cpp  wrapper_modify_control.cpp  wrapper_modify_params.cpp  wrapper_ui.cpp
Python/src/Cpp/include/: modify_params.hpp  objective_function.hpp
Python/src/Cpp/src/: data_info.cpp  matrix_mult.cpp  modify_params.cpp  objective_function.cpp
R/: .Rbuildignore  DESCRIPTION  NAMESPACE
R/R/: RcppExports.R
R/dev/: matrix_freq.R  test.qmd
R/inst/include/: data_info.hpp  matrix_freq.hpp  model_sdt.hpp  modify_params.hpp
R/man/: criterion_likelihood.Rd  criterion_posterior.Rd  criterion_prior.Rd  data_info.Rd  info_data.Rd  matrix_freq.Rd  matrix_mult.Rd  matrix_prob.Rd  modify_params.Rd  modify_prior.Rd
R/src/: Makevars  Makevars.win  RcppExports.cpp  r_algorithm_nlopt.cpp  r_criterion_posterior.cpp  r_estimate_abc.cpp  r_estimate_map.cpp  r_estimate_mcmc.cpp  r_estimate_mle.cpp  r_info_data.cpp  r_info_nlopt.cpp  r_matrix_freq.cpp  r_model_sdt.cpp  r_modify_control.cpp  r_modify_outputs.cpp  r_modify_params.cpp  r_progress_bar.cpp  wrapper_criterion_likelihood.cpp  wrapper_criterion_posterior.cpp  wrapper_criterion_prior.cpp  wrapper_data_info.cpp  wrapper_estimate_map.cpp  wrapper_estimate_mle.cpp  wrapper_loss_function.cpp  wrapper_matrix_freq.cpp  wrapper_matrix_mult.cpp  wrapper_matrix_prob.cpp  wrapper_model_sdt.cpp  wrapper_modify_control.cpp  wrapper_modify_params.cpp  wrapper_modify_prior.cpp
R/src/Cpp/include/: estimate_mle.hpp  loss_function.hpp  matrix_prob.hpp  model_sdt.hpp  modify_params.hpp
R/src/Cpp/src/: build_objective.cpp  loss_function.cpp  matrix_prob.cpp  model_sdt.cpp
data/: exp2.csv  exp3.csv
demo/: estimate_1_MAP.R  tool_update_priors.R
dev/: test.R  test.py  test.qmd
