[build-system]
requires = ["scikit-build-core", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "metaSDT"
version = "0.0.7"
description = "High-performance Meta-Cognitive SDT modeling via C++"
dependencies = ["pandas"]

[tool.scikit-build]
wheel.packages = ["metaSDT"]
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
cmake.source-dir = "."

[tool.pyright]
extraPaths = ["."]
